# LMBenchmark

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark-job.yaml  pyproject.toml  requirements.txt  run_benchmarks.sh
.github/workflows/: docker-build-push.yml
agentic/: README.md  agentic-qa.py  demo.jsonl
configs/April2025/: README.md
configs/April2025/70B/: lmcache.yaml  lmcache_config.yaml  start_router.sh
configs/April2025/8B/: agg_router_8B_0.7.2.yaml  lmcache.yaml  lmcache_config.yaml  start_lmcache_v1.sh  start_sglang.sh  start_vllm_v1.sh  vllm.yaml
mooncake/: mooncake-qa.py  run.sh
real-multi-round-qa/: README.md  multi-round-qa.py  plot.py  prepare.py
run_scripts/: README.md
run_scripts/70B/: agg_router_70B_0.8.4.yaml  start_lmcache_v1.sh  start_sglang.sh  start_vllm_v1.sh  vllm.yaml
run_scripts/8B/: agg_router_8B_0.8.4.yaml  start_router.sh
sharegpt/: README.md  __init__.py  data_preprocessing.py  prepare_sharegpt_data.sh  run.json  run.sh  sharegpt-qa.py  test_output_3.csv  warmup.json
synthetic-multi-round-qa/: README.md  __init__.py  calculat_itl.py  long_input_short_output_run.sh  long_input_short_output_warmup.sh  multi-round-qa.py  short_input_short_output.sh  stack_short_input_short_output.yaml
