[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmark tools for LLM testing"
requires-python = ">=3.8"

dependencies = [
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sharegpt", "synthetic-multi-round-qa"] 